correction d'un overlap pour le sidebar quand il y a un zoom sur le navigateur

--- a/client/src/app/components/sidebar/sidebar.component.scss
+++ b/client/src/app/components/sidebar/sidebar.component.scss
@@ -20,6 +20,4 @@
     justify-content: right;
     align-items: flex-end;
     margin-bottom: auto;
-    position: absolute;
-    bottom: 0;
 }
